# CrissCross

./: .dockerignore  .gitignore  Dockerfile  README.md  Redis.md  erlang.py  launch_crisscross_server.sh  launch_root_server.sh  mix.exs  run.py
.github/workflows/: dockerhub.yml
benchmarks/: get.exs  put.exs
config/: config.exs  prod.exs
data/: appendonly.aof  dump.rdb
lib/: criss_cross.ex
lib/criss_cross/: application.ex  command_queue.ex  connection_cache.ex  external_redis.ex  glue_sql.ex  internal_redis.ex  kv_store.ex  local_btree.ex  peer_connector.ex  process_queue.ex  scanner.ex  synced_db.ex  utils.ex  value_cloner.ex  vpn_client.ex  vpn_config.ex
lib/dht_store/: dht_redis.ex
lib/store/: announcing_store.ex  cache_store.ex  cached_rpc.ex  ipfs.ex  local.ex  merkle_store.ex  mldht.ex  redis.ex  sled_store.ex
native/crisscross_gluesql/: Cargo.toml  README.md
native/crisscross_gluesql/src/: alter_table.rs  atoms.rs  lib.rs  metadata.rs
priv/: .bashrc  run.sh
test/: iron_cub_test.exs
